# obsidian-attachments-cleaner

./: .gitignore  README.md  cli.py  config.py  core.py  main.py  manage.py  pyproject.toml  views.py
obsidian_cleaner/: cli.py  config.py  core.py
