[project]
name = "obsidian-attachments-cleaner"
version = "0.1.0"
description = ""
authors = [
    {name = "Aleksander Zizevskikh",email = "zizevskikh.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
